--- a/starship.toml
+++ b/starship.toml
@@ -7,7 +7,7 @@ add_newline = false
 line_break.disabled = false
 
 # right prompt. You can customize this prompt to show information when the prompt is on the right side of the terminal.
-right_format="$kubernetes$aws${custom.aws_expires_gt_1h}${custom.aws_expires_lt_1h}"
+right_format = "$kubernetes$aws${custom.aws_expires_gt_1h}${custom.aws_expires_lt_1h}"
 
 # the order of the elements in the prompt
 format = "$character$directory$all"
@@ -34,7 +34,7 @@ command = "$HOME/.dotfiles/scripts/show_aws_session_expires_prompt.sh 0 3600"
 
 [aws]
 format = "on [$symbol$profile(\\($region\\))]($style) "
-style = "bold #FF9900" 
+style = "bold #FF9900"
 
 [aws.profile_aliases]
 "corujaengi" = "sandbox"
@@ -62,68 +62,8 @@ style = "bold yellow"
 [battery]
 disabled = true
 
-[buf]
-symbol = " "
-
-[c]
-symbol = " "
-
-[conda]
-symbol = " "
-
-[crystal]
-symbol = " "
-
-[dart]
-symbol = " "
-
 [docker_context]
 disabled = true
-
-[elixir]
-symbol = " "
-
-[elm]
-symbol = " "
-
-[fennel]
-symbol = " "
-
-[fossil_branch]
-symbol = " "
-
-[git_branch]
-symbol = " "
-
-[golang]
-symbol = " "
-
-[guix_shell]
-symbol = " "
-
-[haskell]
-symbol = " "
-
-[haxe]
-symbol = " "
-
-[hg_branch]
-symbol = " "
-
-[hostname]
-ssh_symbol = " "
-
-[java]
-symbol = " "
-
-[julia]
-symbol = " "
-
-[kotlin]
-symbol = " "
-
-[lua]
-symbol = " "
 
 [memory_usage]
 symbol = "󰍛 "
@@ -134,89 +74,11 @@ symbol = "󰔷 "
 [nim]
 symbol = "󰆥 "
 
-[nix_shell]
-symbol = " "
-
-[nodejs]
-symbol = " "
-
-[ocaml]
-symbol = " "
-
-[os.symbols]
-Alpaquita = " "
-Alpine = " "
-AlmaLinux = " "
-Amazon = " "
-Android = " "
-Arch = " "
-Artix = " "
-CentOS = " "
-Debian = " "
-DragonFly = " "
-Emscripten = " "
-EndeavourOS = " "
-Fedora = " "
-FreeBSD = " "
-Garuda = "󰛓 "
-Gentoo = " "
-HardenedBSD = "󰞌 "
-Illumos = "󰈸 "
-Kali = " "
-Linux = " "
-Mabox = " "
-Macos = " "
-Manjaro = " "
-Mariner = " "
-MidnightBSD = " "
-Mint = " "
-NetBSD = " "
-NixOS = " "
-OpenBSD = "󰈺 "
-openSUSE = " "
-OracleLinux = "󰌷 "
-Pop = " "
-Raspbian = " "
-Redhat = " "
-RedHatEnterprise = " "
-RockyLinux = " "
-Redox = "󰀘 "
-Solus = "󰠳 "
-SUSE = " "
-Ubuntu = " "
-Unknown = " "
-Void = " "
-Windows = "󰍲 "
-
 [package]
 symbol = "󰏗 "
 
-[perl]
-symbol = " "
+[nodejs]
+symbol = "[⬢](bold green) "
 
-[php]
-symbol = " "
-
-[pijul_channel]
-symbol = " "
-
-[python]
-symbol = " "
-
-[rlang]
-symbol = "󰟔 "
-
-[ruby]
-symbol = " "
-
-[rust]
-symbol = " "
-
-[scala]
-symbol = " "
-
-[swift]
-symbol = " "
-
-[zig]
-symbol = " "
+[golang]
+symbol = "\uF8D0 a"
